Fix name spacing issue on contact for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ a {
   @media screen and (max-width: 655px) {
     .spaceOne {
       width: 100%;
-      height: 70vh; } }
+      height: 65vh; } }
   .spaceOne h1 {
     font-size: 70px;
     color: #F5F5F5;
@@ -164,7 +164,7 @@ a {
   @media screen and (max-width: 655px) {
     .spaceTwo {
       width: 100%;
-      height: 15vh; } }
+      height: 12vh; } }
   .spaceTwo h1 {
     font-size: 60px;
     color: #4A4A4A;
@@ -344,7 +344,7 @@ a {
 @media screen and (max-width: 655px) {
   .spaceOne.clicked h1 {
     font-size: 40px;
-    margin-top: 100px;
+    margin-top: 210px;
     transition: all 1s ease-in-out; } }
 /* ----------------------- Styles for Case Study -------*/
 .caseStudyWrapper {
